--- a/index.html
+++ b/index.html
@@ -60,15 +60,20 @@
         <!-- Main Content -->
         <main class="main-content">
             <div class="content-header">
-                <div class="view-controls">
-                    <button id="singleViewBtn" class="view-btn active" title="Xem đơn">
-                        <i class="fas fa-file-alt"></i>
-                        <span>Đã chỉnh sửa</span>
+                <div class="content-header-left">
+                    <button id="toggleSidebarMain" class="btn-icon sidebar-toggle-main" title="Hiện mục lục">
+                        <i class="fas fa-chevron-right"></i>
                     </button>
-                    <button id="splitViewBtn" class="view-btn" title="So sánh split" style="display: none;">
-                        <i class="fas fa-columns"></i>
-                        <span>So sánh</span>
-                    </button>
+                    <div class="view-controls">
+                        <button id="singleViewBtn" class="view-btn active" title="Xem đơn">
+                            <i class="fas fa-file-alt"></i>
+                            <span>Đã chỉnh sửa</span>
+                        </button>
+                        <button id="splitViewBtn" class="view-btn" title="So sánh split" style="display: none;">
+                            <i class="fas fa-columns"></i>
+                            <span>So sánh</span>
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="content-wrapper">
